--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4887,7 +4887,7 @@ Desay:
 
 # DEXP (dexp.club)
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P380i|R1[18]0|Q110|E210|B(?:450|340|35[05])|M445|T155|A(?:1[456]0|340)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250)(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|(?<!ILIUM )S(?:3[78]0|2[89]0|670)|AL(?:[12]40|[23]50)|AS(?:155|[123]60)| (?:N280i|P380i|R1[18]0|Q110|E210|B(?:450|340|35[05])|M445|T155|A(?:1[456]0|340)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[1-4]55|H170|H310|P510|L2[17]0)|Z250|A440)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -4922,7 +4922,7 @@ DEXP:
       model: 'Ursus $1'
       device: 'tablet'
 
-    - regex: ' (B450|B340|B35[05]|BL155|BL160|A160|A340|T155|Z[1-4]55|G25[05]|Z250)(?:[);/ ]|$)'
+    - regex: ' (A440|B450|B340|B35[05]|BL155|BL160|A160|A340|T155|Z[1-4]55|G25[05]|Z250)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'SENIOR(?:[);/ ]|$)'
       model: 'Senior'
@@ -11285,7 +11285,7 @@ Memup:
 
 # Mecer
 Mecer:
-  regex: '(M785|800P3[12]C|101P51C|X1010)(?:[);/ ]|$)'
+  regex: '(M785|800P3[12]C|101P51C|X1010|M77QF6)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'M785(?:[);/ ]|$)'
@@ -11298,6 +11298,8 @@ Mecer:
       model: 'Xpress Smartlife 800P32C'
     - regex: '101P51C(?:[);/ ]|$)'
       model: 'Xpress Smartlife 101P51C'
+    - regex: 'M77QF6(?:[);/ ]|$)'
+      model: 'Xpress Smartlife M77QF6'
 
 # mio
 Mio:
@@ -11684,10 +11686,10 @@ Motorola:
       model: 'Moto G'
     - regex: '(?:MOT-|Motorola-)?XT1609'
       model: 'Moto G4 Play'
-    - regex: '(?:MOT-|Motorola-)?XT1799-2'
-      model: 'Moto G5s'
-    - regex: '(?:MOT-|Motorola-)?XT180[3-5]|Moto G ?5S Plus'
+    - regex: '(?:MOT-|Motorola-)?XT180[3-5]|Moto G ?5S Plus|Moto G \(5S\) Plus'
       model: 'Moto G5s Plus'
+    - regex: '(?:MOT-|Motorola-)?XT1799-2|Moto G \(5S\)'
+      model: 'Moto G5s'
     - regex: '(?:MOT-|Motorola-)?XT168[57]'
       model: 'Moto G5 Plus'
     - regex: '(?:MOT-|Motorola-)?XT167[06]' #XT1671 XT1677
@@ -14589,7 +14591,7 @@ Samsung:
       model: 'Galaxy S20'
     - regex: '(?:SAMSUNG-)?SM-G981(?:U1|[0BNUVW])|SCG01|SC-51A|SC51Aa'
       model: 'Galaxy S20 5G'
-    - regex: '(?:SAMSUNG-)?SM-G780F'
+    - regex: '(?:SAMSUNG-)?SM-G780'
       model: 'Galaxy S20 FE'
     - regex: '(?:SAMSUNG-)?SM-G781(?:U1|[0BNUVW])'
       model: 'Galaxy S20 FE 5G'
@@ -14913,6 +14915,8 @@ Samsung:
       model: 'Galaxy M40'
     - regex: '(?:SAMSUNG-)?SM-M515F'
       model: 'Galaxy M51'
+    - regex: '(?:SAMSUNG-)?SM-M625'
+      model: 'Galaxy M62'
     - regex: '(?:SAMSUNG-)?SM-W201([689])'
       model: 'Galaxy W201$1'
 
@@ -18455,7 +18459,7 @@ Zopo:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGY]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182G|joyeuse'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|A[CI])|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182G|joyeuse'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -18495,6 +18499,8 @@ Xiaomi:
       model: 'Mi 9 SE'
     - regex: 'MI CC 9e'
       model: 'Mi CC 9e'
+    - regex: 'MI CC9 Pro Premium Edition'
+      model: 'Mi CC 9 Pro Premium Edition'
     - regex: 'MI CC9 Pro'
       model: 'Mi CC 9 Pro'
     - regex: 'MI CC 9(?: Meitu Edition)?(?:[);/ ]|$)'
@@ -18505,6 +18511,8 @@ Xiaomi:
       model: 'Mi 10 Pro'
     - regex: 'M2011K2[CG](?:[);/ ]|$)'
       model: 'Mi 11'
+    - regex: 'M2012K11AI(?:[);/ ]|$)'
+      model: 'Mi 11X'
     - regex: 'M2007J3S[GI](?:[);/ ]|$)'
       model: 'Mi 10T Pro 5G'
     - regex: 'M2007J17G(?:[);/ ]|$)'
@@ -18521,12 +18529,14 @@ Xiaomi:
       model: 'Mi 10i'
     - regex: 'M2012K11G(?:[);/ ]|$)'
       model: 'Mi 11i'
-    - regex: 'M2101K9A[GI](?:[);/ ]|$)'
-      model: 'Mi 11 Lite'
     - regex: 'M2101K9[GCR](?:[);/ ]|$)'
       model: 'Mi 11 Lite 5G'
+    - regex: '(?:M2101K9A[GI]|Mi 11 Lite)(?:[);/ ]|$)'
+      model: 'Mi 11 Lite'
     - regex: 'M2102K1[CG](?:[);/ ]|$)'
       model: 'Mi 11 Ultra'
+    - regex: 'M2102K1AC(?:[);/ ]|$)'
+      model: 'Mi 11 Pro'
     - regex: 'MI[ _]8[ _]Lite(?:[);/ ]|$)'
       model: 'Mi 8 Lite'
     - regex: 'MI 8 Explorer Edition(?:[);/ ]|$)'
@@ -18717,6 +18727,9 @@ Xiaomi:
       device: 'phablet'
     - regex: 'M2103K19[GC]'
       model: 'Redmi Note 10 5G'
+      device: 'phablet'
+    - regex: 'M2103K19I'
+      model: 'Redmi Note 10T 5G'
       device: 'phablet'
     - regex: 'XIG02(?:[);/ ]|$)'
       model: 'Redmi Note 10 JE'
